--- a/index.html
+++ b/index.html
@@ -21,5 +21,5 @@ layout: page
         </ul>
     </nav>
 
-  <p><i class="fa fa-rss"></i> subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p>
+  <p><i class="fa fa-rss"></i> Subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p>
 
